# WeatherBus

./: .gitignore  CMakeLists.txt  Doxyfile  PayloadBuilder.c  README.md  WeatherBus.c  doxygen.h  idf_component.yaml  idf_component.yml  library.properties
hal/: arduino_hal.cpp  esp_idf_hal.c
include/: WeatherBus.h  WeatherBusPayload.h  weatherbus.h  weatherbus_crc.h  weatherbus_hal.h  weatherbus_ids.h  weatherbus_parser.h  weatherbus_payload.h  weatherbus_transport.h  weatherbus_types.h
src/: PayloadBuilder.c  WeatherBus.c  weatherbus_crc.c  weatherbus_parser.c  weatherbus_payload.c  weatherbus_transport.c
src/hal/: arduino_hal.cpp  esp_idf_hal.c
